--- a/Segment.ipynb
+++ b/Segment.ipynb
@@ -19,12 +19,12 @@
         "id": "RqryNYYlFZmw"
       },
       "id": "RqryNYYlFZmw",
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 18,
       "id": "5a01266a",
       "metadata": {
         "id": "5a01266a"
@@ -60,68 +60,29 @@
       ],
       "metadata": {
         "id": "euNPfPkfGIID",
-        "outputId": "3b1c7b13-3b12-43d9-ed4e-dd8adc4944f7",
+        "outputId": "3736e021-e3a1-4ef1-ace6-f92eac869346",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
       "id": "euNPfPkfGIID",
-      "execution_count": 10,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'/content'"
+              "'/content/PSYC-221-Project'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 19
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "os.listdir()"
-      ],
-      "metadata": {
-        "id": "fmlbP93mGJ2o",
-        "outputId": "8ef0ebe2-3000-4d26-c91d-00a3c8384928",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "id": "fmlbP93mGJ2o",
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "['.gitignore', '.git', 'README.md', 'brainmetshare-3', 'Segment.ipynb']"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "os.chdir('PSYC-221-Project')"
-      ],
-      "metadata": {
-        "id": "L0tjohqJGSEs"
-      },
-      "id": "L0tjohqJGSEs",
-      "execution_count": 12,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -135,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 20,
       "id": "a29a7bbd",
       "metadata": {
         "id": "a29a7bbd"
@@ -147,7 +108,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 21,
       "id": "08f0321d",
       "metadata": {
         "id": "08f0321d"
@@ -159,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 22,
       "id": "1264c4cb",
       "metadata": {
         "id": "1264c4cb"
