--- a/Segment.ipynb
+++ b/Segment.ipynb
@@ -13,18 +13,37 @@
     {
       "cell_type": "code",
       "source": [
-        "# !git clone https://github.com/guswns3396/PSYC-221-Project.git"
+        "!git clone https://github.com/guswns3396/PSYC-221-Project.git"
       ],
       "metadata": {
-        "id": "RqryNYYlFZmw"
+        "id": "RqryNYYlFZmw",
+        "outputId": "10d069ef-2d9b-4420-b39e-0e2324d4e205",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "id": "RqryNYYlFZmw",
-      "execution_count": 17,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'PSYC-221-Project'...\n",
+            "remote: Enumerating objects: 919, done.\u001b[K\n",
+            "remote: Counting objects: 100% (285/285), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (282/282), done.\u001b[K\n",
+            "remote: Total 919 (delta 9), reused 269 (delta 0), pack-reused 634\u001b[K\n",
+            "Receiving objects: 100% (919/919), 2.52 GiB | 25.18 MiB/s, done.\n",
+            "Resolving deltas: 100% (113/113), done.\n",
+            "Updating files: 100% (732/732), done.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 2,
       "id": "5a01266a",
       "metadata": {
         "id": "5a01266a"
@@ -60,29 +79,81 @@
       ],
       "metadata": {
         "id": "euNPfPkfGIID",
-        "outputId": "3736e021-e3a1-4ef1-ace6-f92eac869346",
+        "outputId": "0e93542c-2a39-4976-8b5a-6e5e0f894f3b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
       "id": "euNPfPkfGIID",
-      "execution_count": 19,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'/content/PSYC-221-Project'"
+              "'/content'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 3
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "os.chdir('PSYC-221-Project')"
+      ],
+      "metadata": {
+        "id": "O2yd05XjN0_1"
+      },
+      "id": "O2yd05XjN0_1",
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "os.listdir()"
+      ],
+      "metadata": {
+        "id": "xw9eZqktN53Q",
+        "outputId": "7c6d18b5-29d8-46cb-9e21-40b27cad2b74",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "xw9eZqktN53Q",
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['.gitignore', '.git', 'README.md', 'brainmetshare-3', 'Segment.ipynb']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with open('README.md', 'w') as f:\n",
+        "  f.write('Test')"
+      ],
+      "metadata": {
+        "id": "t-Wuj0_QOFmy"
+      },
+      "id": "t-Wuj0_QOFmy",
+      "execution_count": 6,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -96,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "a29a7bbd",
       "metadata": {
         "id": "a29a7bbd"
@@ -108,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "08f0321d",
       "metadata": {
         "id": "08f0321d"
@@ -120,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "id": "1264c4cb",
       "metadata": {
         "id": "1264c4cb"
