--- a/Segment.ipynb
+++ b/Segment.ipynb
@@ -17,7 +17,7 @@
       ],
       "metadata": {
         "id": "RqryNYYlFZmw",
-        "outputId": "10d069ef-2d9b-4420-b39e-0e2324d4e205",
+        "outputId": "4c927369-df27-4b64-ea9a-2b7e91b462ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -30,13 +30,13 @@
           "name": "stdout",
           "text": [
             "Cloning into 'PSYC-221-Project'...\n",
-            "remote: Enumerating objects: 919, done.\u001b[K\n",
-            "remote: Counting objects: 100% (285/285), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (282/282), done.\u001b[K\n",
-            "remote: Total 919 (delta 9), reused 269 (delta 0), pack-reused 634\u001b[K\n",
-            "Receiving objects: 100% (919/919), 2.52 GiB | 25.18 MiB/s, done.\n",
-            "Resolving deltas: 100% (113/113), done.\n",
-            "Updating files: 100% (732/732), done.\n"
+            "remote: Enumerating objects: 926, done.\u001b[K\n",
+            "remote: Counting objects: 100% (292/292), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (289/289), done.\u001b[K\n",
+            "remote: Total 926 (delta 13), reused 269 (delta 0), pack-reused 634\u001b[K\n",
+            "Receiving objects: 100% (926/926), 2.52 GiB | 34.36 MiB/s, done.\n",
+            "Resolving deltas: 100% (117/117), done.\n",
+            "Updating files: 100% (733/733), done.\n"
           ]
         }
       ]
@@ -79,7 +79,7 @@
       ],
       "metadata": {
         "id": "euNPfPkfGIID",
-        "outputId": "0e93542c-2a39-4976-8b5a-6e5e0f894f3b",
+        "outputId": "4ff1c6a0-7f14-4813-a2ce-4f4255604302",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
@@ -122,7 +122,7 @@
       ],
       "metadata": {
         "id": "xw9eZqktN53Q",
-        "outputId": "7c6d18b5-29d8-46cb-9e21-40b27cad2b74",
+        "outputId": "1a09f247-002d-4630-c324-09c205a26241",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -134,26 +134,18 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['.gitignore', '.git', 'README.md', 'brainmetshare-3', 'Segment.ipynb']"
+              "['.gitignore',\n",
+              " '.git',\n",
+              " 'README.md',\n",
+              " 'brainmetshare-3',\n",
+              " 'Segment.ipynb',\n",
+              " 'Untitled1.ipynb']"
             ]
           },
           "metadata": {},
           "execution_count": 5
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "with open('README.md', 'w') as f:\n",
-        "  f.write('Test')"
-      ],
-      "metadata": {
-        "id": "t-Wuj0_QOFmy"
-      },
-      "id": "t-Wuj0_QOFmy",
-      "execution_count": 6,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -167,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "a29a7bbd",
       "metadata": {
         "id": "a29a7bbd"
@@ -179,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "08f0321d",
       "metadata": {
         "id": "08f0321d"
@@ -191,7 +183,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "id": "1264c4cb",
       "metadata": {
         "id": "1264c4cb"
@@ -215,7 +207,17 @@
         "id": "ba23d803"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "class CustomDataset(Dataset):\n",
+        "    def __init__(self, img_dir):\n",
+        "        self.img_dir = img_dir\n",
+        "\n",
+        "    def __len__(self):\n",
+        "      pass\n",
+        "\n",
+        "    def __getitem__(self, idx):\n",
+        "      pass"
+      ]
     }
   ],
   "metadata": {
