--- a/Segment.ipynb
+++ b/Segment.ipynb
@@ -18,7 +18,7 @@
       ],
       "metadata": {
         "id": "Q5GpsLKubH3y",
-        "outputId": "45aec8df-70fc-4865-95c9-96b9a804aeaf",
+        "outputId": "4b9899fd-d262-44bc-e19f-5cd67ebffb00",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -42,7 +42,7 @@
       ],
       "metadata": {
         "id": "O2yd05XjN0_1",
-        "outputId": "de72d555-ae58-4085-d174-7bbaa92120df",
+        "outputId": "b5c6b175-dddd-4879-d625-0dffc1a8bdb1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -66,7 +66,7 @@
       ],
       "metadata": {
         "id": "xw9eZqktN53Q",
-        "outputId": "7ecf2a93-d61c-4c67-8f6b-0bee843fafb1",
+        "outputId": "a1606541-d551-45cd-c4f9-d13e43ed6988",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -99,11 +99,11 @@
         "!pip install monai"
       ],
       "metadata": {
-        "id": "ASJXEkc4Xo5e",
-        "outputId": "a587accf-c4d1-4120-b0c2-0b22b4c6fc45",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ASJXEkc4Xo5e",
+        "outputId": "4a6609fc-a87f-4bc7-d6cd-91f54c6aa56d"
       },
       "id": "ASJXEkc4Xo5e",
       "execution_count": 4,
@@ -114,7 +114,7 @@
           "text": [
             "Collecting monai\n",
             "  Downloading monai-1.3.0-202310121228-py3-none-any.whl (1.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/1.3 MB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.1/1.3 MB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.3/1.3 MB\u001b[0m \u001b[31m21.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: numpy>=1.20 in /usr/local/lib/python3.10/dist-packages (from monai) (1.23.5)\n",
             "Requirement already satisfied: torch>=1.9 in /usr/local/lib/python3.10/dist-packages (from monai) (2.1.0+cu118)\n",
             "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from torch>=1.9->monai) (3.13.1)\n",
@@ -135,8 +135,11 @@
     {
       "cell_type": "code",
       "source": [
+        "import logging\n",
         "import os\n",
+        "import sys\n",
         "from glob import glob\n",
+        "from abc import ABC, abstractmethod\n",
         "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
@@ -148,11 +151,11 @@
         "import nibabel as nib\n",
         "\n",
         "import monai\n",
-        "from monai.data import Dataset, decollate_batch, DataLoader\n",
-        "from monai.inferers import sliding_window_inference\n",
-        "from monai.metrics import DiceMetric\n",
         "import monai.transforms as mt\n",
-        "from monai.visualize import plot_2d_or_3d_image\n",
+        "from monai.data import Dataset, DataLoader\n",
+        "from monai.apps import CrossValidation\n",
+        "\n",
+        "from monai.utils import set_determinism\n",
         "\n",
         "import torch"
       ],
@@ -160,7 +163,20 @@
         "id": "cgz1UzGxAAZp"
       },
       "id": "cgz1UzGxAAZp",
-      "execution_count": 5,
+      "execution_count": 34,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "logging.basicConfig(stream=sys.stdout, level=logging.INFO)\n",
+        "set_determinism(seed=0)"
+      ],
+      "metadata": {
+        "id": "fhC342sKE-Ee"
+      },
+      "id": "fhC342sKE-Ee",
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -187,7 +203,7 @@
         "id": "SEYlR-y-hEyu"
       },
       "id": "SEYlR-y-hEyu",
-      "execution_count": 6,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -207,7 +223,7 @@
         "id": "U76SpNPt0OZe"
       },
       "id": "U76SpNPt0OZe",
-      "execution_count": 7,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -233,7 +249,7 @@
         "id": "2xi1bmdx4HVf"
       },
       "id": "2xi1bmdx4HVf",
-      "execution_count": 8,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -250,12 +266,12 @@
         "id": "nSojSNFB-z4i"
       },
       "id": "nSojSNFB-z4i",
-      "execution_count": 10,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 28,
       "id": "a29a7bbd",
       "metadata": {
         "id": "a29a7bbd"
@@ -274,7 +290,7 @@
         "id": "ZjygWPYGz4h-"
       },
       "id": "ZjygWPYGz4h-",
-      "execution_count": 12,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -303,7 +319,7 @@
         "id": "Z7HRPP-Y4I_-"
       },
       "id": "Z7HRPP-Y4I_-",
-      "execution_count": 13,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -324,14 +340,14 @@
       ],
       "metadata": {
         "id": "7tkyOe9TaaUZ",
-        "outputId": "459a4eb1-13e4-4f2a-f29e-0108d8dd9948",
+        "outputId": "d0bfd46f-e5d4-4a4c-8daa-d3c452ba1d93",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 243
         }
       },
       "id": "7tkyOe9TaaUZ",
-      "execution_count": 14,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
@@ -367,6 +383,9 @@
       "source": [
         "KEYS = ('img', 'seg')\n",
         "\n",
+        "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+        "print('Using device:', device)\n",
+        "\n",
         "xform_train = mt.Compose([\n",
         "  # load images\n",
         "  mt.LoadImageD(KEYS),\n",
@@ -394,25 +413,128 @@
         "  # augment data to be invariant to intensity shift or scale\n",
         "  mt.RandScaleIntensityd(keys=\"img\", factors=0.1, prob=1.0),\n",
         "  mt.RandShiftIntensityd(keys=\"img\", offsets=0.1, prob=1.0),\n",
+        "  # convert to tensor & move to device\n",
+        "  mt.ToTensorD(keys=KEYS, device=device)\n",
+        "])\n",
+        "\n",
+        "xform_val = mt.Compose([\n",
+        "  # load images\n",
+        "  mt.LoadImageD(KEYS),\n",
+        "  # make channel the first dimension / add channel dimension if necessary\n",
+        "  mt.EnsureChannelFirstD(KEYS),\n",
+        "  # fix meta\n",
+        "  fix_meta,\n",
+        "  # print data to ensure fix\n",
+        "  # print_data,\n",
+        "  # make sure tensor type\n",
+        "  mt.EnsureTypeD(keys=KEYS),\n",
+        "  # make sure all have same orientation (axcode)\n",
+        "  mt.Orientationd(keys=KEYS, axcodes=\"RAS\"),\n",
+        "  mt.Spacingd(\n",
+        "      keys=KEYS,\n",
+        "      pixdim=(1.0, 1.0, 1.0),\n",
+        "      mode=(\"bilinear\", \"nearest\"),\n",
+        "  ),\n",
+        "  # normalize intensity\n",
+        "  mt.NormalizeIntensityd(keys=\"img\", nonzero=True, channel_wise=True),\n",
+        "  # convert to tensor & move to device\n",
+        "  mt.ToTensorD(keys=KEYS, device=device)\n",
         "])"
       ],
       "metadata": {
-        "id": "XpZnDnTiAWZP"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XpZnDnTiAWZP",
+        "outputId": "4a47a837-428c-4491-8125-2f586fa93744"
       },
       "id": "XpZnDnTiAWZP",
-      "execution_count": 15,
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Using device: cuda\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class MRIDataset(ABC, Dataset):\n",
+        "    \"\"\"\n",
+        "    Base class to generate cross validation datasets.\n",
+        "    \"\"\"\n",
+        "\n",
+        "    def __init__(\n",
+        "        self,\n",
+        "        data,\n",
+        "        transform,\n",
+        "        **kwargs\n",
+        "    ) -> None:\n",
+        "        data = self._split_datalist(datalist=data)\n",
+        "        super().__init__(data, transform, **kwargs)\n",
+        "\n",
+        "    @abstractmethod\n",
+        "    def _split_datalist(self, datalist):\n",
+        "        raise NotImplementedError(f\"Subclass {self.__class__.__name__} must implement this method.\")"
+      ],
+      "metadata": {
+        "id": "_9MfS7xPLSgl"
+      },
+      "id": "_9MfS7xPLSgl",
+      "execution_count": 37,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "train_ds = Dataset(data_dicts, transform=xform_train)"
+        "num = 5\n",
+        "folds = list(range(num))\n",
+        "\n",
+        "cvdataset = CrossValidation(\n",
+        "    dataset_cls=MRIDataset,\n",
+        "    data=data_dicts,\n",
+        "    nfolds=num,\n",
+        "    seed=12345,\n",
+        "    transform=xform_train,\n",
+        ")"
       ],
       "metadata": {
-        "id": "18PB_l8a59Mg"
+        "id": "qYPLBTXwLzwQ"
       },
-      "id": "18PB_l8a59Mg",
-      "execution_count": 16,
+      "id": "qYPLBTXwLzwQ",
+      "execution_count": 38,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# get datasets\n",
+        "train_dss = [cvdataset.get_dataset(folds=folds[0:i] + folds[(i + 1) :]) for i in folds]\n",
+        "val_dss = [cvdataset.get_dataset(folds=i, transform=xform_val) for i in folds]\n",
+        "\n",
+        "# get loaders\n",
+        "train_loaders = [DataLoader(train_dss[i], batch_size=1, shuffle=True, num_workers=4) for i in folds]\n",
+        "val_loaders = [DataLoader(val_dss[i], batch_size=1, num_workers=4) for i in folds]"
+      ],
+      "metadata": {
+        "id": "VIKbmsCjMhC0"
+      },
+      "id": "VIKbmsCjMhC0",
+      "execution_count": 44,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "bW1pkW5iQkEM"
+      },
+      "id": "bW1pkW5iQkEM",
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -427,12 +549,24 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "net = monai.networks.nets.UNet(\n",
+        "    spatial_dims=3,\n",
+        "    in_channels=4,\n",
+        "    out_channels=3,\n",
+        "    channels=(16, 32, 64, 128, 256),\n",
+        "    strides=(2, 2, 2, 2),\n",
+        "    num_res_units=2,\n",
+        "    norm=monai.networks.layers.Norm.BATCH,\n",
+        ").to(device)\n",
+        "loss = monai.losses.DiceLoss(sigmoid=True)\n",
+        "opt = torch.optim.Adam(net.parameters(), 1e-2)"
+      ],
       "metadata": {
         "id": "d1L8hUms55j7"
       },
       "id": "d1L8hUms55j7",
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -458,8 +592,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
@@ -476,8 +609,10 @@
     },
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 5
