use mt.LambdaD to fix & print metatensor

--- a/Segment.ipynb
+++ b/Segment.ipynb
@@ -18,7 +18,7 @@
       ],
       "metadata": {
         "id": "Q5GpsLKubH3y",
-        "outputId": "1d4b5a74-af15-4fb4-a2e5-668963a24c00",
+        "outputId": "e378ab61-bf8a-4ac3-f67f-ef1254387467",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -42,7 +42,7 @@
       ],
       "metadata": {
         "id": "O2yd05XjN0_1",
-        "outputId": "2263421f-13c7-4a80-9d24-03618ad43e01",
+        "outputId": "6326747e-fff9-489a-8f14-9871d056375c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -66,7 +66,7 @@
       ],
       "metadata": {
         "id": "xw9eZqktN53Q",
-        "outputId": "24d56c40-9a28-4ced-bec6-ad08d2d5f607",
+        "outputId": "109dd342-68e5-49d3-984e-f4cb4a8a0583",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -103,7 +103,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ASJXEkc4Xo5e",
-        "outputId": "665ae4ca-dced-45ff-baaa-4e1697998d26"
+        "outputId": "ed069be6-6292-4ad9-a918-6be92af8faec"
       },
       "id": "ASJXEkc4Xo5e",
       "execution_count": 4,
@@ -225,21 +225,16 @@
     {
       "cell_type": "code",
       "source": [
-        "def fix_meta(data):\n",
+        "def fix_meta(metatensor):\n",
         "  \"\"\"\n",
-        "  fix meta information of data after stacking\n",
+        "  fix meta information of metatensor after stacking\n",
         "  \"\"\"\n",
         "  # fix img meta\n",
-        "  a = [data['img'].ndim, *data['img'].shape[1:], data['img'].shape[0]]\n",
+        "  a = [metatensor.ndim, *metatensor.shape[1:], metatensor.shape[0]]\n",
         "  for i, val in enumerate(a):\n",
-        "    data['img'].meta['dim'][i] = val\n",
-        "  data['img'].meta['original_channel_dim'] = -1\n",
-        "  # fix seg meta\n",
-        "  a = [data['seg'].ndim, *data['seg'].shape[1:], data['seg'].shape[0]]\n",
-        "  for i, val in enumerate(a):\n",
-        "    data['seg'].meta['dim'][i] = val\n",
-        "  data['seg'].meta['original_channel_dim'] = -1\n",
-        "  return data"
+        "    metatensor.meta['dim'][i] = val\n",
+        "  metatensor.meta['original_channel_dim'] = -1\n",
+        "  return metatensor"
       ],
       "metadata": {
         "id": "2xi1bmdx4HVf"
@@ -251,12 +246,10 @@
     {
       "cell_type": "code",
       "source": [
-        "def print_data(data):\n",
-        "  print(data['img'].shape)\n",
-        "  print(data['img'].meta)\n",
-        "  print(data['seg'].shape)\n",
-        "  print(data['seg'].meta)\n",
-        "  return data"
+        "def print_data(metatensor):\n",
+        "  print(metatensor.shape)\n",
+        "  print(metatensor.meta)\n",
+        "  return metatensor"
       ],
       "metadata": {
         "id": "nSojSNFB-z4i"
@@ -341,9 +334,9 @@
         "  # make channel the first dimension / add channel dimension if necessary\n",
         "  mt.EnsureChannelFirstD(KEYS),\n",
         "  # fix meta\n",
-        "  fix_meta,\n",
+        "  mt.LambdaD(KEYS, fix_meta),\n",
         "  # print data to ensure fix\n",
-        "  # print_data,\n",
+        "  mt.LambdaD(KEYS, print_data),\n",
         "  # make sure tensor type\n",
         "  mt.EnsureTypeD(keys=KEYS),\n",
         "  # make sure all have same orientation (axcode)\n",
@@ -372,9 +365,9 @@
         "  # make channel the first dimension / add channel dimension if necessary\n",
         "  mt.EnsureChannelFirstD(KEYS),\n",
         "  # fix meta\n",
-        "  fix_meta,\n",
+        "  mt.LambdaD(KEYS, fix_meta),\n",
         "  # print data to ensure fix\n",
-        "  # print_data,\n",
+        "  mt.LambdaD(KEYS, print_data),\n",
         "  # make sure tensor type\n",
         "  mt.EnsureTypeD(keys=KEYS),\n",
         "  # make sure all have same orientation (axcode)\n",
@@ -395,10 +388,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XpZnDnTiAWZP",
-        "outputId": "a8625554-8159-4810-b684-ddd3725cdb82"
+        "outputId": "6ffd98a3-471d-4d7c-a624-03a965bb2ee6"
       },
       "id": "XpZnDnTiAWZP",
-      "execution_count": 14,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,7 +427,7 @@
         "id": "_9MfS7xPLSgl"
       },
       "id": "_9MfS7xPLSgl",
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -456,7 +449,7 @@
         "id": "qYPLBTXwLzwQ"
       },
       "id": "qYPLBTXwLzwQ",
-      "execution_count": 16,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -477,7 +470,7 @@
         "id": "VIKbmsCjMhC0"
       },
       "id": "VIKbmsCjMhC0",
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -511,20 +504,38 @@
         "plt.show()"
       ],
       "metadata": {
-        "id": "MpophQYg7raU",
-        "outputId": "879925bd-a4be-493d-d82b-e3d03184cea4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 261
-        }
+          "height": 593
+        },
+        "id": "MpophQYg7raU",
+        "outputId": "285b842f-8f8c-4fd0-bafc-b8a501d68cab"
       },
       "id": "MpophQYg7raU",
-      "execution_count": 18,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "torch.Size([4, 256, 256, 150])\n",
+            "{'sizeof_hdr': array(348, dtype=int32), 'extents': array(0, dtype=int32), 'session_error': array(0, dtype=int16), 'dim_info': array(0, dtype=uint8), 'dim': array([  4, 256, 256, 150,   4,   1,   1,   1], dtype=int16), 'intent_p1': array(0., dtype=float32), 'intent_p2': array(0., dtype=float32), 'intent_p3': array(0., dtype=float32), 'intent_code': array(0, dtype=int16), 'datatype': array(16, dtype=int16), 'bitpix': array(32, dtype=int16), 'slice_start': array(0, dtype=int16), 'pixdim': array([1.    , 0.9375, 0.9375, 1.    , 1.    , 1.    , 1.    , 1.    ],\n",
+            "      dtype=float32), 'vox_offset': array(0., dtype=float32), 'scl_slope': array(nan, dtype=float32), 'scl_inter': array(nan, dtype=float32), 'slice_end': array(0, dtype=int16), 'slice_code': array(0, dtype=uint8), 'xyzt_units': array(0, dtype=uint8), 'cal_max': array(0., dtype=float32), 'cal_min': array(0., dtype=float32), 'slice_duration': array(0., dtype=float32), 'toffset': array(0., dtype=float32), 'glmax': array(0, dtype=int32), 'glmin': array(0, dtype=int32), 'qform_code': array(0, dtype=int16), 'sform_code': array(2, dtype=int16), 'quatern_b': array(0., dtype=float32), 'quatern_c': array(0., dtype=float32), 'quatern_d': array(0., dtype=float32), 'qoffset_x': array(0., dtype=float32), 'qoffset_y': array(0., dtype=float32), 'qoffset_z': array(0., dtype=float32), 'srow_x': array([0.9375, 0.    , 0.    , 0.    ], dtype=float32), 'srow_y': array([0.    , 0.9375, 0.    , 0.    ], dtype=float32), 'srow_z': array([0., 0., 1., 0.], dtype=float32), affine: tensor([[0.9375, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.9375, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.0000, 1.0000, 0.0000],\n",
+            "        [0.0000, 0.0000, 0.0000, 1.0000]], dtype=torch.float64), original_affine: array([[0.9375, 0.    , 0.    , 0.    ],\n",
+            "       [0.    , 0.9375, 0.    , 0.    ],\n",
+            "       [0.    , 0.    , 1.    , 0.    ],\n",
+            "       [0.    , 0.    , 0.    , 1.    ]]), 'as_closest_canonical': False, spatial_shape: array([256, 256, 150], dtype=int16), space: RAS, original_channel_dim: -1, 'filename_or_obj': 'brainmetshare-3/train/Mets_094/bravo.nii.gz'}\n",
+            "torch.Size([1, 256, 256, 150])\n",
+            "{'sizeof_hdr': array(348, dtype=int32), 'extents': array(0, dtype=int32), 'session_error': array(0, dtype=int16), 'dim_info': array(0, dtype=uint8), 'dim': array([  4, 256, 256, 150,   1,   1,   1,   1], dtype=int16), 'intent_p1': array(0., dtype=float32), 'intent_p2': array(0., dtype=float32), 'intent_p3': array(0., dtype=float32), 'intent_code': array(0, dtype=int16), 'datatype': array(16, dtype=int16), 'bitpix': array(32, dtype=int16), 'slice_start': array(0, dtype=int16), 'pixdim': array([1.    , 0.9375, 0.9375, 1.    , 1.    , 1.    , 1.    , 1.    ],\n",
+            "      dtype=float32), 'vox_offset': array(0., dtype=float32), 'scl_slope': array(nan, dtype=float32), 'scl_inter': array(nan, dtype=float32), 'slice_end': array(0, dtype=int16), 'slice_code': array(0, dtype=uint8), 'xyzt_units': array(0, dtype=uint8), 'cal_max': array(0., dtype=float32), 'cal_min': array(0., dtype=float32), 'slice_duration': array(0., dtype=float32), 'toffset': array(0., dtype=float32), 'glmax': array(0, dtype=int32), 'glmin': array(0, dtype=int32), 'qform_code': array(0, dtype=int16), 'sform_code': array(2, dtype=int16), 'quatern_b': array(0., dtype=float32), 'quatern_c': array(0., dtype=float32), 'quatern_d': array(0., dtype=float32), 'qoffset_x': array(0., dtype=float32), 'qoffset_y': array(0., dtype=float32), 'qoffset_z': array(0., dtype=float32), 'srow_x': array([0.9375, 0.    , 0.    , 0.    ], dtype=float32), 'srow_y': array([0.    , 0.9375, 0.    , 0.    ], dtype=float32), 'srow_z': array([0., 0., 1., 0.], dtype=float32), affine: tensor([[0.9375, 0.0000, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.9375, 0.0000, 0.0000],\n",
+            "        [0.0000, 0.0000, 1.0000, 0.0000],\n",
+            "        [0.0000, 0.0000, 0.0000, 1.0000]], dtype=torch.float64), original_affine: array([[0.9375, 0.    , 0.    , 0.    ],\n",
+            "       [0.    , 0.9375, 0.    , 0.    ],\n",
+            "       [0.    , 0.    , 1.    , 0.    ],\n",
+            "       [0.    , 0.    , 0.    , 1.    ]]), 'as_closest_canonical': False, spatial_shape: array([256, 256, 150], dtype=int16), space: RAS, original_channel_dim: -1, 'filename_or_obj': 'brainmetshare-3/train/Mets_094/seg.nii.gz'}\n",
             "image shape: torch.Size([4, 240, 240, 150])\n",
             "segment shape: torch.Size([1, 240, 240, 150])\n"
           ]
@@ -559,8 +570,8 @@
         "    spatial_dims=3,\n",
         "    # 4 modalities\n",
         "    in_channels=4,\n",
-        "\n",
-        "    out_channels=3,\n",
+        "    # 1 channel for output\n",
+        "    out_channels=1,\n",
         "    channels=(16, 32, 64, 128, 256),\n",
         "    strides=(2, 2, 2, 2),\n",
         "    kernel_size=3,\n",
